--- a/appcorner.it/userapps.html
+++ b/appcorner.it/userapps.html
@@ -9,6 +9,7 @@
         <div class="appstore-container" id="userapps-container"></div>
         
         <script src="ext/jquery.min.js"></script>
+        <script src="ext/jquery-dateFormat.min.js"></script>        
         <script src="ext/spin.min.js"></script>
         <script src="ext/owl-carousel/owl.carousel.min.js"></script>
         
