Price drops API

--- a/appcorner.it/pricedrops.html
+++ b/appcorner.it/pricedrops.html
@@ -7,8 +7,8 @@
     </head>
     <body>
         <a href="http://www.appcorner.it/" target="_blank"><img src="img/appcorner.it_logo.png"/></a>
-
-        <div class="appstore-container" id="userapps-container"></div>
+        
+        <div class="appstore-container" id="pricedrops-container"></div>
         
         <script src="ext/jquery.min.js"></script>
         <script src="ext/jquery-dateFormat.min.js"></script>        
